<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.MinimalBitcoinWidget.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/description1"
            android:src="@drawable/bitcoin_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/bitcoin_title"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/widget_iso_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/iso_code"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ProgressBar
            android:id="@+id/widget_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/widget_price_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/widget_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/symbol"
                android:textColor="?attr/appWidgetTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/widget_text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/loading_text"
                android:textColor="?attr/appWidgetTextColor"
                android:textSize="24sp" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_change_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center_vertical"
            android:text="@string/str_24h"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/widget_day_change"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center_vertical"
            android:text="@string/loading_text"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
