<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.MinimalBitcoinWidget.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/bitcoin_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/bitcoin_title"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/widget_iso_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/iso_code"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_symbol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:text="@string/symbol"
            android:textAlignment="center"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/widget_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/loading_text"
            android:textColor="?attr/appWidgetTextColor"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center_vertical"
                android:text="@string/str_24h"
                android:textColor="?attr/appWidgetTextColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/widget_day_change"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center_vertical"
                android:text="@string/loading_text"
                android:textColor="?attr/appWidgetTextColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageButton
                android:id="@+id/widget_refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:src="@drawable/icon_refresh_widget" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>