<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/m_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/price_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:id="@+id/price_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:contentDescription="@string/description1"
                    android:foregroundGravity="center"
                    android:padding="1dp"
                    android:src="@drawable/bitcoin_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/bitcoin_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/main_iso_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/iso_code"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:gravity="center_vertical"
                    android:text="@string/symbol"
                    android:textAlignment="center"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/main_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_bold"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="42sp"
                    tools:text="65,000.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/manrope_regular"
                        android:gravity="center_vertical"
                        android:text="@string/str_24h"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/main_day_change"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/manrope_regular"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        tools:text="+2.5%" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/dark_gray"
            android:visibility="gone" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/release_notes_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="right"
        android:layout_marginTop="2dp"
        android:textColor="@color/dark_gray"
        app:iconTint="@color/dark_gray"
        app:iconSize="14dp"
        android:textSize="14sp"
        android:text="@string/whats_new_title"
        app:icon="@android:drawable/ic_dialog_info" />

</LinearLayout>